// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LimitOrderHook #initialize gas cost 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 49105,
}
`;

exports[`LimitOrderHook #lock gas overhead of no-op lock 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 59780,
}
`;

exports[`LimitOrderHook #mint gas cost 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 287310,
}
`;

exports[`LimitOrderHook #mint gas cost with hooks 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 291426,
}
`;

exports[`LimitOrderHook #swap gas cost 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 84545,
}
`;

exports[`LimitOrderHook #swap gas cost for swap against liquidity 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 224157,
}
`;

exports[`LimitOrderHook #swap gas cost with hooks 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 84574,
}
`;

exports[`LimitOrderHook bytecode size 1`] = `23344`;
